--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.9.5",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.terrain-tools": "5.0.3",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
